--- a/SI_Format/SI_Format.nuspec
+++ b/SI_Format/SI_Format.nuspec
@@ -4,7 +4,7 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
+    <authors>Conor O'Brien</authors>
     <owners>$author$</owners>
     <licenseUrl>https://creativecommons.org/licenses/by/4.0/</licenseUrl>
     <projectUrl>https://github.com/cfob/SI_Format</projectUrl>
